Add professional font

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,22 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@font-face {
+  font-family: "ar-gr";
+  src: url("/fonts/ar-gr-bold.woff2");
+  font-style: normal;
+  font-weight: 400;
+  font-display: swap;
+}
+@font-face {
+  font-family: "ar-gr";
+  src: url("/fonts/ar-gr-regular.woff2");
+  font-style: normal;
+  font-weight: 400;
+  font-display: swap;
+}
+
+html {
+  font-family: "ar-gr";
+}
